corrected issue with group banner

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -226,7 +226,7 @@
   var imgSrc = $('.lms_banner .div-height img').attr('src');
   $('.lms_banner .div-height img').attr('src', '');
   $('.lms_banner .div-height img').attr('alt', '');
-  $('.lms_banner').backstretch(imgSrc);
+  $('.lms_banner .div-height').backstretch(imgSrc);
 </script>
 
 {% endblock %}
