--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -1,9 +1,10 @@
-{% load get_nroer_menu  get_user_group  get_group_object  get_existing_groups_excluded  get_profile_pic  get_gapps_iconbar user_access_policy get_user_object check_is_gstaff get_attribute_value get_sg_member_of get_relation_value get_explore_url from ndf_tags %}
+{% load get_nroer_menu  get_user_group  get_group_object  get_existing_groups_excluded  get_profile_pic  get_gapps_iconbar user_access_policy get_user_object check_is_gstaff get_attribute_value get_sg_member_of get_relation_value get_explore_url get_test_page_oid from ndf_tags %}
 {% load i18n %}
 {% load cache %}
 
   {% get_group_object groupid as group_object %}
   {% get_explore_url as explore_url %}
+  {% get_test_page_oid as help_oid %}
   
       
 <nav class="top-bar" data-topbar role="navigation" id="menu_bar_gstudio">
@@ -136,6 +137,7 @@
                 {% endif %}
                 <li><a href="{% url explore_url %}" {% if title == 'base courses' or title == "courses" or title == "drafts" %} class="active" {% endif %} > Explore</a>
                 </li>
+                <li class=""><a target="_blank" href="{% url 'help_page_view' help_oid %}"><i class="fi-info"></i> Help Topics</a></li>
             </ul>
           </section>
     </nav>
