added my performanc

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -137,7 +137,9 @@
                 {% endif %}
                 <li><a href="{% url explore_url %}" {% if title == 'base courses' or title == "courses" or title == "drafts" %} class="active" {% endif %} > Explore</a>
                 </li>
+                {% if help_oid %}
                 <li class=""><a target="_blank" href="{% url 'help_page_view' help_oid %}"><i class="fi-info"></i> Help Topics</a></li>
+                {% endif %}
             </ul>
           </section>
     </nav>
