--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -55,11 +55,14 @@
 
 </head>
 <body>
+    {% if site.BUDDY_LOGIN and user.is_authenticated %}
+        {% if request.author.agency_type == 'Student' %}
+            {% include "ndf/buddy.html" %}
+        {% endif %}
+    {% endif %}
+
     {% include "ndf/header_clix.html" %}
     {% block extended_header %}{% endblock %}
-    {% if request.author.agency_type == 'Student' %}
-        {% include "ndf/buddy.html" %}
-    {% endif %}
 
     {% block body_content %} {% endblock %}
 
@@ -188,7 +191,6 @@
     //   });
 
     {% block script %} {% endblock %}
-
   </script>
 </body>
 </html>
